tera/src/snapshot_tests/snapshots/tera__snapshot_tests__parser__parser_components_definition_success@types.txt.snap
---
source: tera/src/snapshot_tests/parser.rs
expression: "components[0]"
input_file: tera/src/snapshot_tests/parser_inputs/success/components/def/types.txt
---
ComponentDefinition {
    name: "array",
    kwargs: {
        "age": ComponentArgument {
            default: None,
            typ: Some(
                Integer,
            ),
        },
        "data": ComponentArgument {
            default: Some(
                Map({}),
            ),
            typ: Some(
                Map,
            ),
        },
        "greeting": ComponentArgument {
            default: None,
            typ: Some(
                String,
            ),
        },
    },
    rest_param_name: None,
    metadata: {},
    body: [
        "Hello",
    ],
}
