tera/src/snapshot_tests/snapshots/tera__snapshot_tests__parser__parser_components_success@basic.txt.snap
---
source: tera/src/snapshot_tests/parser.rs
expression: "components[0]"
input_file: tera/src/snapshot_tests/parser_inputs/success/components/basic.txt
---
ComponentDefinition {
    name: "array",
    kwargs: {
        "array": ComponentArgument {
            default: Some(
                Array(
                    [],
                ),
            ),
            typ: None,
        },
        "array_of_maps": ComponentArgument {
            default: Some(
                Array(
                    [
                        Map(
                            {
                                String(
                                    "hello",
                                ): I64(
                                    1,
                                ),
                            },
                        ),
                    ],
                ),
            ),
            typ: None,
        },
        "map": ComponentArgument {
            default: Some(
                Map(
                    {},
                ),
            ),
            typ: None,
        },
    },
    metadata: {},
    body: [
        "Hello",
    ],
}
