tera/src/snapshot_tests/snapshots/tera__snapshot_tests__parser__parser_components_success@types.txt.snap
---
source: tera/src/snapshot_tests/parser.rs
expression: "components[0]"
input_file: tera/src/snapshot_tests/parser_inputs/success/components/types.txt
---
ComponentDefinition {
    name: "array",
    kwargs: {
        "age": ComponentArgument {
            default: None,
            typ: Some(
                Integer,
            ),
        },
        "data": ComponentArgument {
            default: Some(
                Map(
                    {},
                ),
            ),
            typ: Some(
                Map,
            ),
        },
        "greeting": ComponentArgument {
            default: None,
            typ: Some(
                String,
            ),
        },
    },
    metadata: {},
    body: [
        "Hello",
    ],
}
