tera/src/snapshot_tests/snapshots/tera__snapshot_tests__parser__parser_errors@array_dimensions.txt.snap
---
source: tera/src/snapshot_tests/parser.rs
expression: res.unwrap_err()
input_file: tera/src/snapshot_tests/parser_inputs/errors/array_dimensions.txt
---
Failed to parse 'array_dimensions.txt'

 Syntax error --> [array_dimensions.txt:1:5]
  |
1 | {{ [[[1], [2]], [true]] }}
  |      ^---
  = Arrays can have a maximum of 2 dimensions.
